--- a/README.CD
+++ b/README.CD
@@ -38,8 +38,8 @@ CPU:  Pentium Pro/II/III/IV/Xeon, Athlon (i.e. P6 or newer) SMP supported
 IDE:  Intel PIIX chipset, others will be PIO only (slow)
 SCSI: Adaptec / Dell PERC Raid (aacraid), megaraid, Adaptec aic7xxx
 Net:  Recommended: Intel e1000, Broadcom BCM57xx (tg3), 3c905 (3c59x)
-      Tested but require extra copies : pcnet32, Intel e100
-      Untested and also requires extra copies : tulip
+      Tested but require extra copies : pcnet32
+      Untested and also requires extra copies : Intel e100, tulip
 
 Because of the demo CD's use of RAM disks, make sure you have plenty
 of RAM (256MB+).
@@ -248,6 +248,27 @@ obviously get very confused as the file system structure may change
 underneath them (having the same partition mounted rw twice is a sure
 fire way to cause irreparable damage)!  If you want read-write
 sharing, export the directory to other domains via NFS from domain0.
+
+
+Troubleshooting Problems
+========================
+
+If you have problems booting Xen, there are a number of boot parameters 
+that may be able to help diagnose problems:
+
+ noacpi   	turn acpi probing off, which may confuse Xen on some chipsets
+ watchdog	enable NMI watchdog which can report certain failures
+ nosmp		disable SMP support
+ noht		disable Hyperthreading
+ ifname=ethXX	select which Ethernet interface to use if you have multiple
+ ifname=dummy	don't use any network interface
+ ser_baud=xxx	set serial line baud rate for console 
+ dom0_mem=xxx 	set the initial amount of memory for domain0. Xen will also
+		  reserve some memory fr itself too. 
+		  
+
+It's probably a good idea to join the Xen developer's mailing list on
+Sourceforge:    http://lists.sourceforge.net/lists/listinfo/xen-devel   
 
 
 About The Xen Demo CD
