--- a/README.CD
+++ b/README.CD
@@ -99,7 +99,7 @@ if you want DNS.
 You can start an X server with 'startx'. It defaults to a conservative
 1024x768, but you can edit the script for higher resoloutions.  The CD
 contains a load of standard software. You should be able to start
-Apache, PostgreSQL, Mozzila etc in the normal way, but because
+Apache, PostgreSQL, Mozilla etc in the normal way, but because
 everything is running off CD the performance will be very sluggish and
 you may run out of memory for the 'tmpfs' file system.  You may wish
 to go ahead and install Xen/XenoLinux on your hard drive, either
@@ -423,6 +423,13 @@ If you have a crash you'll likely get a crash dump containing an EIP
 (PC) which, along with an 'objdump -d image', can be useful in
 figuring out what's happened.  Debug a XenoLinux image just as you
 would any other Linux kernel.
+
+We supply a handy debug terminal program which you can find in
+/usr/local/src/xen-1.0rc1/xeno.bk/tools/misc/miniterm/
+This should be built and executed on another machine that is connected
+via a null modem cable. Documentation is included.
+Alternatively, telnet can be used in 'char mode' if the Xen machine is
+connected to a serial-port server.
 
 
 Description of how the XenDemoCD boots
